完善腾讯上传文件功能