@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.sparrowmini</groupId>
 	<artifactId>sparrow-ext-file-txcos</artifactId>
-	<version>0.1.1</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<properties>
-		<java.version>11</java.version>
-		<hibernate.version>5.6.5.Final</hibernate.version>
+		<java.version>17</java.version>
+		<hibernate.version>7.0.0.Final</hibernate.version>
 		<aspectj.version>1.9.19</aspectj.version>
 	</properties>
 
@@ -17,7 +17,7 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.7.17</version>
+				<version>3.4.5</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -27,10 +27,23 @@
 	<dependencies>
 		<dependency>
 			<groupId>cn.sparrowmini</groupId>
-			<artifactId>sparrow-org</artifactId>
-			<version>0.3.1</version>
+			<artifactId>sparrow-common-service</artifactId>
+			<version>0.1.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.8</version>
+		</dependency>
 
 		<!-- 腾讯存储桶-->
 		<dependency>
@@ -43,38 +56,19 @@
 			<artifactId>cos_api</artifactId>
 			<version>5.6.100</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<optional>true</optional>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
 				<configuration>
 					<release>11</release>
-					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 				</configuration>
 			</plugin>
-			<!-- add this plugin to run test cass in maven auto-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.2</version>
 				<configuration>
 					<argLine>
 						--illegal-access=permit
